[package]
name = "timecode"
version = "0.4.2-alpha.0"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com"]
description = """
library to manipulate timecode
"""
repository = "https://github.com/MarcAntoine-Arnaud/rs_timecode"
documentation = "https://docs.rs/timecode"
readme = "README.md"
categories = ["encoding"]
keywords = ["timecode", "SMPTE"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alga = "0.9"
log = "0.4"
nalgebra = "0.24"
serde = "^1.0"
serde_derive = "^1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2"}
wasm-bindgen-test = { version = "0.3"}
