[package]
name = "timecode"
version = "0.7.0"
authors = ["Marc-Antoine Arnaud <marc-antoine.arnaud@luminvent.com"]
description = """
library to manipulate timecode
"""
repository = "https://github.com/media-io/rs_timecode"
documentation = "https://docs.rs/timecode"
readme = "README.md"
categories = ["encoding"]
keywords = ["timecode", "SMPTE"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alga = "0.9"
frame-rate = { version = "0.2" }
log = "0.4"
nalgebra = "0.24"
num-traits = "0.2"
serde = { version = "^1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2"}
wasm-bindgen-test = { version = "0.3"}
