[package]
name = "timecode"
version = "0.7.2"
authors = [
    "Marc-Antoine Arnaud <marc-antoine.arnaud@luminvent.com",
    "Vincent Jousse <vincent.jousse@luminvent.com>",
]
edition = "2021"
description = """
library to manipulate timecode
"""
documentation = "https://docs.rs/timecode"
readme = "README.md"
repository = "https://github.com/media-io/timecode"
license = "MIT"
keywords = ["timecode", "SMPTE"]
categories = ["encoding"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frame-rate = { version = "0.2" }
log = "0.4"
num-traits = "0.2"
serde = { version = "^1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2"}
wasm-bindgen-test = { version = "0.3"}
